--- a/.env
+++ b/.env
@@ -2,5 +2,5 @@ JWT_SECRET=TopSecret
 MONGO_USER=m001-student
 MONGO_PASSWORD=m001-student 
 MONGO_PATH=@sandbox.3fiqf.mongodb.net/
-MONGO_DB=EpitmenyadoDB
+MONGO_DB=SzamokDB
 PORT=5000
