--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 JWT_SECRET=TopSecret
 MONGO_USER=m001-student
 MONGO_PASSWORD=m001-student 
-MONGO_PATH=@sandbox.3fiqf.mongodb.net/
+MONGO_PATH=@sandbox.vpsx1.mongodb.net/
 MONGO_DB=SzamokDB
 PORT=5000
