--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 JWT_SECRET=TopSecret
 MONGO_USER=SampleStudent
 MONGO_PASSWORD=SimpleSamplePassword
-MONGO_PATH=@cluster1.3fnlf.mongodb.net/
+MONGO_PATH=@cluster1.vpsx1.mongodb.net/
 MONGO_DB=SandboxDB
 PORT=5000
